--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
     margin: auto;
 }
 
+.logo {
+
+}
+
 nav ul {
     list-style-type: none;
     margin: 0;
@@ -83,7 +87,6 @@ h2 {
 
 .flex-container {
     display: flex;
-    /*background-color:  rgb(117, 167, 253);*/
 }
 
 .flex-container>div {
@@ -159,7 +162,6 @@ input[type=submit]:hover {
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-
     .col-25,
     .col-75,
     input[type=submit] {
@@ -187,6 +189,12 @@ th {
     padding-top: 12px;
     padding-bottom: 12px;
     background-color: #6495ED;
+}
+
+.historia {
+    display: flex;
+    justify-content: space-around;
+    margin: 3%;
 }
 
 footer {
