--- a/style.css
+++ b/style.css
@@ -283,3 +283,44 @@ nav .dropdown:hover .dropdown-content {
     width: 300px; 
     height: 200px;
 }
+
+/* --------------------------------------------------------------------*/
+/* Números */
+/* --------------------------------------------------------------------*/
+
+section {
+    padding: 10px;
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    gap: 10px;
+    /* intervalo entre as colunas */
+}
+
+@media screen and (min-width: 992px) {
+    section {
+        grid-template-columns: auto auto auto;
+    }
+}
+
+article {
+    background: #f8f2f2;
+    padding: 20px;
+    border-bottom: 4px solid #75a7fd;
+    text-align: center;
+}
+
+article span {
+    font-size: 40pt;
+    font-weight: bold;
+}
+
+article p {
+    margin: 0;
+    font-size: 20pt;
+}
+
+.de {
+    font-size: 20pt;
+}
